# tab-reaper

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
src/pdf_tab_reaper/: __init__.py  pdf_tab_reaper.py
src/tab_reaper/: chrome.py  gdocs.py  tab_reaper.py
